Cambios menores de diseño
Corregido error de colores que no permitian tener un texto mas legible.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@ body {
     text-align: center;
     -webkit-font-smoothing: antialiased;
     color: rgb(243, 243, 243);
-    background-color: #1d8a51;
+    background-color: #09a9ab;
 }
 
 .container {
@@ -284,7 +284,7 @@ hr {
 
 <body>
     <div class=container>
-    <h1> Servicio de crowdsourcing de comida a domicilio</h1>
+    <h1> Tareas SA de Servicio de Delivery</h1>
    
       </div>
   <div class="navigation">
@@ -300,9 +300,9 @@ hr {
           
       <div class="modal-body nav">
          <ul>
-           <li><a href="./SolicitudComida.html">Solicitud de comida</a></li>
-           <li><a href="./RecepcionOrdenes.html">Recepción de órdenes</a></li>
-           <li><a href="./ServicioEntrega.html">Servicio de entrega</a></li>
+           <li><a href="./SolicitudComida.html">Solicitud de Comida</a></li>
+           <li><a href="./RecepcionOrdenes.html">Recepción de Ordenes</a></li>
+           <li><a href="./ServicioEntrega.html">Servicio de Entrega</a></li>
      
           </ul>
         </div>
